main.tf
data "azurerm_resource_group" "existing_rg" {
  count = var.create_rg ? 0 : 1
  name  = var.rg_name
}

resource "azurerm_resource_group" "rg" {
  count    = var.create_rg ? 1 : 0
  location = var.location
  name     = "${var.resource_group_name_prefix}-${var.project_name}-mono"
}

# Create virtual network
resource "azurerm_virtual_network" "this" {
  name                = var.vnet_name
  address_space       = ["10.0.0.0/16"]
  location            = var.location
  resource_group_name = var.create_rg ? azurerm_resource_group.rg[0].name : var.rg_name
}

# Create subnet
resource "azurerm_subnet" "this" {
  name                 = "hostSubnet"
  resource_group_name  = var.create_rg ? azurerm_resource_group.rg[0].name : var.rg_name
  virtual_network_name = azurerm_virtual_network.this.name
  address_prefixes     = ["10.0.1.0/24"]
}

# Create public IP
resource "azurerm_public_ip" "this" {
  name                = "hostPublicIP"
  location            = var.location
  resource_group_name = var.create_rg ? azurerm_resource_group.rg[0].name : var.rg_name
  allocation_method   = "Static"
}

# Create Network Security Group and rule
resource "azurerm_network_security_group" "this" {
  name                = "myNetworkSecurityGroup"
  location            = var.location
  resource_group_name = var.create_rg ? azurerm_resource_group.rg[0].name : var.rg_name

  security_rule {
    name                       = "SSH"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "HTTP"
    priority                   = 1002
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "HTTPS"
    priority                   = 1003
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

# Create network interface
resource "azurerm_network_interface" "this" {
  name                = "myNIC"
  location            = var.location
  resource_group_name = var.create_rg ? azurerm_resource_group.rg[0].name : var.rg_name

  ip_configuration {
    name                          = "my_nic_configuration"
    subnet_id                     = azurerm_subnet.this.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.this.id
  }
}

# Connect the security group to the network interface
resource "azurerm_network_interface_security_group_association" "this" {
  network_interface_id      = azurerm_network_interface.this.id
  network_security_group_id = azurerm_network_security_group.this.id
}

# Create storage account for boot diagnostics
resource "azurerm_storage_account" "this" {
  name                     = "diag${var.app_name}"
  location                 = var.location
  resource_group_name      = var.create_rg ? azurerm_resource_group.rg[0].name : var.rg_name
  account_tier             = "Standard"
  account_replication_type = "LRS"
}

# Create virtual machine
resource "azurerm_linux_virtual_machine" "this" {
  name                  = var.vm_name
  location              = var.location
  resource_group_name   = var.create_rg ? azurerm_resource_group.rg[0].name : var.rg_name
  network_interface_ids = [azurerm_network_interface.this.id]
  size                  = var.vm_size

  os_disk {
    name                 = "myOsDisk"
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-focal"
    sku       = "20_04-lts"
    version   = "latest"
  }

  computer_name  = "${var.app_name}host"
  admin_username = var.username

  admin_ssh_key {
    username   = var.username
    public_key = jsondecode(azapi_resource_action.ssh_public_key_gen.output).publicKey
  }

  boot_diagnostics {
    storage_account_uri = azurerm_storage_account.this.primary_blob_endpoint
  }
}
